fixed bio on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,7 @@ border-radius: 50%;
 }
 .bio p{
     font-size: x-large;
-    padding-top: 75px;
+    padding-top: 100px;
     padding-left: 100px;
     color: var(--color3);
 }
